@@ -61,11 +61,11 @@ my $schema = DBICTest->init_schema (no_deploy => 1);
   # add a temporary sqlt_deploy_hook to a source
   no warnings 'once';
   local *DBICTest::Track::sqlt_deploy_hook = sub {
-    my ($self, $sqlt_table) = @_;
+    my ($class, $sqlt_table) = @_;
 
     $deploy_hook_called = 1;
 
-    is (blessed ($self), 'DBIx::Class::ResultSource::Table', 'Source object passed to plain hook');
+    is ($class, 'DBICTest::Track', 'Result class passed to plain hook');
 
     is (
       $sqlt_table->schema->translator->producer_type,
